`:core:network` module and it's `client` module such as `:data` module code refactored

--- a/feature/issue_details/ui/src/main/res/values/strings.xml
+++ b/feature/issue_details/ui/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="assignees">Assignees</string>
     <string name="description">Description</string>
     <string name="comments">Comments</string>
+    <string name="issue_details">Issue Details</string>
 </resources>
